log
Sat 09 Sep 2023 01:32:44 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|5
total_score: 20/70
ac4576c
Sat 09 Sep 2023 01:38:21 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|6
total_score: 10/70
235537b
Sat 09 Sep 2023 02:05:39 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
8b3217b
Sat 09 Sep 2023 02:10:20 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 20/70
42fe90f
Sat 09 Sep 2023 02:40:35 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
5c29005
Sat 09 Sep 2023 03:08:00 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:12: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
   65 |     Pair **old_buckets = map->buckets;
      |            ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4eec0a4
Sat 09 Sep 2023 03:08:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13c5365
Sat 09 Sep 2023 03:13:13 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
7f1a554
